[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/SolarSystem/SolarSystem.gd" type="Script" id=1]
[ext_resource path="res://src/Camera2D.tscn" type="PackedScene" id=2]

[node name="SolarSystem" type="Node2D"]
script = ExtResource( 1 )

[node name="CelestialBodies" type="Node2D" parent="."]

[node name="Camera2D" parent="." instance=ExtResource( 2 )]
[connection signal="visibility_changed" from="." to="." method="_on_SolarSystem_visibility_changed"]
